# pysigned

./: .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  main.yml  publish.yml  tests.yml
docs/: how-it-works.md  index.md  installation.md  reference.md  usage.md
examples/: sign_urls.py  sign_urls_async.py
src/pysigned/: __init__.py  backends.py  keys.py  signature.py  utils.py
src/pysigned/extensions/: fastapi.py
tests/: test_backends.py  test_ed25519.py  test_extensions_fastapi.py  test_keys.py  test_mixed.py  test_signature.py  test_utils.py
