[project]
name = "pysigned"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meg Hicks", email = "meg.d.hicks@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pysigned --cov-report=term-missing"
