[project]
name = "pysigned"
version = "0.2.5"
description = "Sign and verify URLs with an expiry, using HMAC or Ed25519"
readme = "README.md"
authors = [
    { name = "Meg Hicks", email = "meg.d.hicks@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-LICENSES"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=40",
    "httpx2>=2.4.0",
]

[project.scripts]
pysigned-gen-key = "pysigned.utils:gen_key"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.111",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pysigned[fastapi]",
    "pip-licenses>=5.5.5",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pysigned --cov-report=term-missing"

[tool.ty.src]
include = ["src", "tests"]

[tool.pip-licenses]
ignore-packages = [
  "pip-licenses",
  "pytest",
  "pytest-cov",
  "mkdocs-material",
  "mkdocstrings[python]",
  "ruff",
  "ty"
]
